unpackaged/objects/wb_soap_log__c.object
<CustomObject>
    <fields>
        <fullName>JStr__c</fullName>
        <label>JStr</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LastAcessDate__c</fullName>
        <label>LastAcessDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LogIn__c</fullName>
        <label>LogIn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MemberID__c</fullName>
        <externalId>true</externalId>
        <label>MemberID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberInfo__c</fullName>
        <label>MemberInfo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MemberNo__c</fullName>
        <externalId>true</externalId>
        <label>MemberNo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>SOAPログ</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>SOAPログ名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>